# cloud-resume

./: .gitignore  README.md  index.html  main.tf  script.js  style.css
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: main.rs  second.rs
