[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.0"

tokio = { version = "1", features = ["macros"] }

aws-config = "1.1"
aws-sdk-dynamodb = "1.1"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"


[[bin]]
name = "counter"
path = "src/main.rs"

[[bin]]
name = "second"
path = "src/second.rs"