[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.0"

tokio = { version = "1", features = ["macros"] }

aws-config = "1.1"
aws-sdk-dynamodb = "1.1"
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
reqwest = {version = "0.12.24", features = ["json", "rustls-tls"]}
axum = "0.8.7" 
tower-http = { version = "0.6.7", features = ["cors"] }
tower = { version = "0.5.2", features = ["util"] }


[[bin]]
name = "counter"
path = "src/main.rs"

[[bin]]
name = "second"
path = "src/second.rs"